refactor: add base for fsd

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,32 @@
 {
-    "compilerOptions": {
-        "strictFunctionTypes": true,
-        "noImplicitAny": true,
-        "allowImportingTsExtensions": true,
-        "preserveConstEnums": true,
-        "target": "ES6",
-        "module": "ES2022",
-        "moduleResolution": "Bundler",
-        "noEmit": true,
-        "allowSyntheticDefaultImports": true,
-        "alwaysStrict": true,
-        "forceConsistentCasingInFileNames": true,
-        "allowJs": true,
-        "resolveJsonModule": true,
-        "strict": true,
-        "jsx": "react",
-        "lib": ["DOM", "ES2021.String", "ES6"]
-    },
-    "include": ["src"],
-    "references": [{ "path": "./tsconfig.node.json" }]
+  "compilerOptions": {
+    "strictFunctionTypes": true,
+    "noImplicitAny": true,
+    "allowImportingTsExtensions": true,
+    "preserveConstEnums": true,
+    "target": "ES6",
+    "module": "ES2022",
+    "moduleResolution": "Bundler",
+    "noEmit": true,
+    "allowSyntheticDefaultImports": true,
+    "alwaysStrict": true,
+    "forceConsistentCasingInFileNames": true,
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "strict": true,
+    "jsx": "react",
+    "lib": [
+      "DOM",
+      "ES2021.String",
+      "ES6"
+    ]
+  },
+  "include": [
+    "src"
+  ],
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    }
+  ]
 }
