--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-storybook": "^0.8.0",
+    "sass": "^1.71.1",
     "storybook": "^7.6.17",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
