fix: исправлена ошибка Требуется импорт Реакт

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,9 +4,11 @@
     "skipLibCheck": true,
     "module": "ESNext",
     "moduleResolution": "bundler",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "jsx": "react-jsx"
   },
   "include": [
-    "vite.config.ts"
+    "vite.config.ts",
+    "**/*.tsx","**/*.ts",
   ]
 }
