--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,13 +2,14 @@
   "compilerOptions": {
     "composite": true,
     "skipLibCheck": true,
-    "module": "ESNext",
-    "moduleResolution": "bundler",
+    "module": "esnext",
+    "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "jsx": "react-jsx"
   },
   "include": [
     "vite.config.ts",
-    "**/*.tsx","**/*.ts",
+    "**/*.tsx",
+    "**/*.ts"
   ]
 }
