feat: agel-995 добавлен виджет счетов с фильтрацией и заготовками под создание счета и страницу с инфо

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "composite": true,
     "skipLibCheck": true,
     "module": "ESNext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "Node10",
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "lib": [
