--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@storybook/test": "^7.6.17",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/yup": "^0.32.0",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
@@ -50,3 +51,5 @@
     "vite": "^5.1.4"
   }
 }
+
+
