--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@pbe/react-yandex-maps": "^1.2.5",
     "@reduxjs/toolkit": "^2.0.1",
     "classnames": "^2.5.1",
     "react": "^18.2.0",
@@ -20,7 +21,8 @@
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "react-yandex-maps": "^4.6.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.17",
