--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "@pbe/react-yandex-maps": "^1.2.5",
     "@reduxjs/toolkit": "^2.0.1",
     "classnames": "^2.5.1",
+    "i18next": "^23.11.4",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.2",
     "jest-environment-jsdom": "^29.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^14.1.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.18.0",
     "react-yandex-maps": "^4.6.0"
