--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "preview": "vite preview",
     "sb": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "test:e2e": "wdio run ./wdio.conf.ts"
+    "test:e2e": "wdio run ./wdio.conf.ts",
+    "i18n:extract": "i18next"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -42,7 +43,6 @@
     "@storybook/test": "^7.6.17",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
-    "@testing-library/vue": "^8.0.3",
     "@testing-library/webdriverio": "^3.2.1",
     "@types/jest": "^29.5.12",
     "@types/react": "^18.3.1",
