--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "sb": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "test:e2e": "wdio run ./wdio.conf.ts",
-    "i18n:extract": "i18next"
+    "i18n:extract": "i18next --config i18next-parser.config.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
