--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,8 @@ events {
 http {
     # what times to include
     include       /etc/nginx/mime.types;
+    application/json                      json;
+    image/png                             png;
     # what is the default one
     default_type  application/octet-stream;
 
