--- a/nginx.conf
+++ b/nginx.conf
@@ -12,8 +12,10 @@ events {
 http {
     # what times to include
     include       /etc/nginx/mime.types;
-    application/json                      json;
-    image/png                             png;
+    types {
+        application/json                      json;
+        image/png                             png;
+    }
     # what is the default one
     default_type  application/octet-stream;
 
