--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^14.1.1",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.18.0",
-    "react-select": "^5.8.0"
+    "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.6.17",
