--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_BASEURL_GATEWAY=http://172.17.1.76:8082
 VITE_BASEURL_INFO=http://172.17.1.76:8085
+VITE_BASEURL_DEPOSIT=http://172.17.1.76:8088
