--- a/k8s/manifest.yml
+++ b/k8s/manifest.yml
@@ -1,3 +1,66 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: nginx-config
+data:
+  nginx.conf: |
+    worker_processes auto;
+
+    events {
+        worker_connections 8000;
+        multi_accept on;
+    }
+
+    http {
+        include       /etc/nginx/mime.types;
+        types {
+            application/json                      json;
+            image/png                             png;
+        }
+        default_type  application/octet-stream;
+
+        log_format compression '$remote_addr - $remote_user [$time_local] '
+            '"$request" $status $upstream_addr '
+            '"$http_referer" "$http_user_agent"';
+
+        gzip                      on;
+        gzip_http_version         1.1;
+        gzip_disable              "msie6";
+        gzip_vary                 on;
+        gzip_min_length           1100;
+        gzip_buffers              64 8k;
+        gzip_comp_level           3;
+        gzip_proxied              any;
+        gzip_types                text/plain text/css application/x-javascript text/xml application/xml;
+
+        server {
+            listen 80;
+            server_name localhost;
+
+            root /usr/share/nginx/html;
+            index index.html index.htm;
+
+            location / {
+                try_files $uri $uri/ /index.html;
+                gzip on;
+                gzip_static on;
+                add_header Cache-Control "max-age=300";
+                add_header Last-Modified "";
+                add_header ETag "";
+            }
+
+            location ~* \.(css|js)$ {
+                try_files $uri =404;
+                access_log off;
+                gzip on;
+                gzip_static on;
+                add_header Cache-Control "max-age=3600";
+                add_header Last-Modified "";
+                add_header ETag "";
+            }
+        }
+    }
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -21,29 +84,23 @@ spec:
         volumeMounts:
         - name: react-config
           mountPath: /usr/share/nginx/html
+        - name: react-config
+          mountPath: /etc/nginx/nginx.conf
+          subPath: nginx.conf
         resources:
           requests:
-            memory: "256Mi"
+            memory: "128Mi"
             cpu: "100m"
           limits:
-            memory: "512Mi"
-            cpu: "500m"
-        readinessProbe:
-          httpGet:
-            path: /
-            port: 80
-          initialDelaySeconds: 5
-          periodSeconds: 10
-        livenessProbe:
-          httpGet:
-            path: /
-            port: 80
-          initialDelaySeconds: 15
-          periodSeconds: 20
+            memory: "256Mi"
+            cpu: "200m"
       volumes:
         - name: react-config
           configMap:
             name: react-config
+        - name: nginx-config
+          configMap:
+            name: nginx-config
 ---
 apiVersion: v1
 kind: Service
