--- a/k8s/manifest.yml
+++ b/k8s/manifest.yml
@@ -82,8 +82,8 @@ spec:
         ports:
         - containerPort: 80
         volumeMounts:
-        # - name: react-config
-        #   mountPath: /usr/share/nginx/html
+        - name: react-config
+          mountPath: /usr/share/nginx/html
         - name: nginx-config
           mountPath: /etc/nginx/nginx.conf
           subPath: nginx.conf
@@ -95,14 +95,12 @@ spec:
             memory: "256Mi"
             cpu: "200m"
       volumes:
-        # - name: react-config
-        #   configMap:
-        #     name: react-config
-        - name: nginx-config
-          configMap:
-            name: nginx-config
-      # imagePullSecrets:
-      #   - name: mysecret
+      - name: react-config
+        configMap:
+          name: react-config
+      - name: nginx-config
+        configMap:
+          name: nginx-config
 
 ---
 apiVersion: v1
@@ -116,5 +114,5 @@ spec:
     - protocol: TCP
       port: 8080
       targetPort: 80
-      nodePort: 31111
+      nodePort: ${NODE_PORT}
   type: NodePort
