--- a/k8s/config-map-nginx.yml
+++ b/k8s/config-map-nginx.yml
@@ -3,60 +3,40 @@ kind: ConfigMap
 metadata:
   name: nginx-config
 data:
-  nginx.conf: |
-    worker_processes auto;
+  js.conf: |
+    gzip                      on;
+    gzip_http_version         1.1;
+    gzip_disable              "msie6";
+    gzip_vary                 on;
+    gzip_min_length           1100;
+    gzip_buffers              64 8k;
+    gzip_comp_level           3;
+    gzip_proxied              any;
+    gzip_types                text/plain text/css application/x-javascript text/xml application/xml;
 
-    events {
-        worker_connections 8000;
-        multi_accept on;
-    }
+    server {
+        listen 80;
+        server_name localhost;
 
-    http {
-        include       /etc/nginx/mime.types;
-        # types {
-        #     application/json                      json;
-        #     image/png                             png;
-        # }
-        default_type  application/octet-stream;
+        root /usr/share/nginx/html;
+        index index.html index.htm;
 
-        log_format compression '$remote_addr - $remote_user [$time_local] '
-            '"$request" $status $upstream_addr '
-            '"$http_referer" "$http_user_agent"';
+        location / {
+            try_files $uri $uri/ /index.html;
+            gzip on;
+            gzip_static on;
+            add_header Cache-Control "max-age=300";
+            add_header Last-Modified "";
+            add_header ETag "";
+        }
 
-        gzip                      on;
-        gzip_http_version         1.1;
-        gzip_disable              "msie6";
-        gzip_vary                 on;
-        gzip_min_length           1100;
-        gzip_buffers              64 8k;
-        gzip_comp_level           3;
-        gzip_proxied              any;
-        gzip_types                text/plain text/css application/x-javascript text/xml application/xml;
-
-        server {
-            listen 80;
-            server_name localhost;
-
-            root /usr/share/nginx/html;
-            index index.html index.htm;
-
-            location / {
-                try_files $uri $uri/ /index.html;
-                gzip on;
-                gzip_static on;
-                add_header Cache-Control "max-age=300";
-                add_header Last-Modified "";
-                add_header ETag "";
-            }
-
-            location ~* \.(css|js)$ {
-                try_files $uri =404;
-                access_log off;
-                gzip on;
-                gzip_static on;
-                add_header Cache-Control "max-age=3600";
-                add_header Last-Modified "";
-                add_header ETag "";
-            }
+        location ~* \.(css|js)$ {
+            try_files $uri =404;
+            access_log off;
+            gzip on;
+            gzip_static on;
+            add_header Cache-Control "max-age=3600";
+            add_header Last-Modified "";
+            add_header ETag "";
         }
     }
