--- a/k8s/manifest.yml
+++ b/k8s/manifest.yml
@@ -19,7 +19,7 @@ spec:
       containers:
       - name: react
         image: ${AND_DOCKER_REGISTRY_NAME}/${CI_PROJECT_NAMESPACE}/${CI_PROJECT_NAME}:${CI_COMMIT_REF_SLUG}
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         ports:
         - containerPort: 80
           protocol: TCP
@@ -31,23 +31,22 @@ spec:
             cpu: 100m
             memory: 128Mi
         volumeMounts:
-        - mountPath: /usr/share/nginx/html
-          name: react-config
+        # - mountPath: /usr/share/nginx/html
+        #   name: react-config
         - mountPath: /etc/nginx/conf.d/
           name: nginx-config
       restartPolicy: Always
       dnsPolicy: ClusterFirst
       terminationGracePeriodSeconds: 30
       volumes:
-      - name: react-config
-        configMap:
-          name: react-config
-          defaultMode: 420
+      # - name: react-config
+      #   configMap:
+      #     name: react-config
+      #     defaultMode: 420
       - name: nginx-config
         configMap:
           name: nginx-config
           defaultMode: 420
-
 ---
 apiVersion: v1
 kind: Service
