--- a/k8s/manifest.yml
+++ b/k8s/manifest.yml
@@ -47,6 +47,9 @@ spec:
         configMap:
           name: nginx-config
           defaultMode: 420
+      imagePullSecrets:
+        - name: mysecret
+
 ---
 apiVersion: v1
 kind: Service
