юнит тест и снэпшот тест написаны для UI answerAndQuestion, интеграционный тест написан для компонента questions-answers

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "moduleResolution": "Node10",
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
+    "types": ["jest", "@testing-library/jest-dom"],
     "lib": [
       "DOM",
       "ES2021.String",
