--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "react",
+  "name": "Ageld-bank",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://elpetra.github.io/Ageld-bank/",
   "scripts": {
     "dev": "vite",
     "predeploy": "npm run build",
@@ -65,6 +66,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-storybook": "^0.8.0",
+    "gh-pages": "^6.3.0",
     "i18next-parser": "^8.13.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
